--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@react-oauth/google": "^0.12.2",
+    "lottie-react": "^2.4.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
