--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@mediapipe/tasks-vision": "^0.10.22-rc.20250304",
     "@react-oauth/google": "^0.12.2",
     "lottie-react": "^2.4.1",
+    "next": "^16.0.10",
     "onnxruntime-web": "^1.23.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next": "16.0.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0"
   },
@@ -31,7 +31,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
